assets/css/style.css
/*------------------------------------------------
# General
------------------------------------------------*/
html {
	font-size: 16px;
}

body {
	background-image: url("../img/RedBackground.png");
}

a {
	color: #DD0000;
	font-family: 'Open Sans', sans-serif;
	font-size: 1rem;
}

a:hover {

}

h1, h2, h3, h4, h5, h6 {
	color: #DD0000;
	font-family: 'Open Sans', sans-serif;
	margin-top: 0;
	margin-bottom: 1.5rem;
}

h1 {
	font-size: 3rem;
}

h2 {
	font-size: 2.5rem;
}

h3 {
	font-size: 2rem;
}

p {
	color: #FFFFFF;
	font-family: 'Montserrat', sans-serif;
	margin-top: 0;
	margin-bottom: 1.5rem;
	opacity: 0.8;
}

.container {
	max-width: 90rem;
}

/*------------------------------------------------
# Header
------------------------------------------------*/
.header {

}

.navbar {
	width: 100%;
	height: 4.375rem;
}

/*------------------------------------------------
# Sections
------------------------------------------------*/
section {
	margin-top: 7.5rem;
}

.section-header {
	margin-bottom: 1.5rem;
}

/*------------------------------------------------
# Buttons
------------------------------------------------*/
.btn-danger {
	color: #FFFFFF !important;
    background-color: #DD0000 !important;
}

.btn-danger:hover {
	color: #DD0000 !important;
	border-color: #DD0000 !important;
    background-color: transparent !important;
}

/*------------------------------------------------
# Cards
------------------------------------------------*/
.card {
	border-color: #FFFFFF;
	background-color: transparent !important;

}

/*------------------------------------------------
# Hero
------------------------------------------------*/
.hero {
	width: 100%;
	height: 56.25rem;
	margin-top: 0;
	background: url("../img/fire-sunset-FZM7PSU-Red.png") top center no-repeat;
}

.hero-content p {
	font-size: 1.5rem;
}

.design-block {
	margin-top: 0 !important;
	margin-bottom: 0 !important;
} 

.design-icon {
	font-size: 5.625rem;
	color: #DD0000;
}


.blog-row {
	margin-bottom: 1.875rem;
}

.blog-icon {
	font-size: 1.5rem;
	color: #DD0000;
	margin-right: 0.5rem;
	margin-bottom: 0 !important;
}

.blog-inline-icon p {
	color: #FFFFFF !important;
	font-size: 1rem;
	color: #DD0000;
	margin-right: 1.875rem;
	margin-bottom: 0 !important;
}

.card-header {
	border-bottom: transparent;
	background-color: #DD0000;
}

.pricing-card-header h3 {
	color: #FFFFFF;
	margin-bottom: 0 !important;
}

.btn-pricing-card {
	margin-top: 1.5rem;
}

/*------------------------------------------------
# Tabs
------------------------------------------------*/
.nav-tabs {
	margin-bottom: 1.875rem;
}

.nav-tabs a.nav-link {
	margin-right: 1.875rem;
	padding-top: 0;
	padding-right: 0;
	padding-bottom: 1.875rem;
	padding-left: 0;
	font-size: 2rem;
}

.nav-tabs a.nav-link.active {
	color: #DD0000;
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 2px solid #DD0000;
    background-color: transparent !important;
}

/*------------------------------------------------
# Portfolio
------------------------------------------------*/

.portfolio-nav {
	margin-bottom: 1.5rem;
}

.portfolio-nav a.nav-link {
	padding-right: 1.5rem;
    padding-left: 1.5rem;
	color: #FFFFFF;
	font-family: 'Montserrat', sans-serif;
	font-size: 1.5rem;
	opacity: 0.8;
}

.portfolio-nav a.nav-link.active {
	border: 1px solid #DD0000;
	border-radius: 1.5rem;
}

.portfolio-row {
	margin-top: 30px;
}

.blog-content {
	margin: 0 30px;
}

.contact-form {
	margin: 30px 30px;
}

.form-row {
	margin-bottom: 1rem;
}

.form-content {
	height: 300px;
	padding-top: 0;
}

